--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "core-js": "^3.6.4",
+    "element-ui": "^2.13.1",
     "flv.js": "^1.5.0",
     "lodash": "^4.17.15",
     "scss": "^0.2.4",
