--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve  --mode dev",
+    "serve": "vue-cli-service serve  --mode dev --open",
     "build": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "async-validator": "^3.2.4",
+    "async-validator": "^3.5.1",
     "axios": "^0.19.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "core-js": "^3.6.4",
-    "element-ui": "^2.13.1",
+    "core-js": "^3.9.1",
+    "element-ui": "^2.15.1",
     "flv.js": "^1.5.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
+    "sass-loader": "^11.0.1",
     "scss": "^0.2.4",
-    "vue": "^2.6.11",
-    "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vue": "^2.6.12",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -29,13 +30,13 @@
     "@vue/eslint-config-standard": "^5.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-vue": "^6.1.2",
-    "less": "^3.0.4",
+    "less": "^3.13.1",
     "less-loader": "^5.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   }
 }
