--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.21",
     "sass-loader": "^11.0.1",
     "scss": "^0.2.4",
+    "sortablejs": "^1.13.0",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
