完成指标拖拽

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "scss": "^0.2.4",
     "sortablejs": "^1.13.0",
     "vue": "^2.6.12",
+    "vue-dragging": "^1.1.0",
     "vue-router": "^3.5.1",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
