--- a/package.json
+++ b/package.json
@@ -15,18 +15,25 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "core-js": "^3.9.1",
     "element-ui": "^2.15.1",
+    "file-loader": "^6.2.0",
     "flv.js": "^1.5.0",
     "lodash": "^4.17.21",
-    "sass-loader": "^11.0.1",
-    "scss": "^0.2.4",
+    "pdfjs-dist": "^3.0.279",
+    "sass": "^1.59.3",
+    "sass-loader": "^8.0.2",
     "sortablejs": "^1.13.0",
     "vue": "^2.6.12",
     "vue-dragging": "^1.1.0",
+    "vue-pdf": "^4.3.0",
+    "vue-pdf-embed": "^1.1.4",
     "vue-router": "^3.5.1",
     "vuedraggable": "^2.24.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-plugin-router": "~4.2.0",
@@ -34,6 +41,7 @@
     "@vue/cli-service": "~4.2.0",
     "@vue/eslint-config-standard": "^5.1.0",
     "babel-eslint": "^10.0.3",
+    "el-tree-select": "^3.1.14",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
